First sketch for IntelliJ without gradle for development